[gd_scene load_steps=30 format=3 uid="uid://c4utablxijfyg"]

[ext_resource type="Texture2D" uid="uid://ct7aegast0gur" path="res://assets/Title/Title blur.png" id="1"]
[ext_resource type="FontFile" uid="uid://8radtqwgtd6p" path="res://assets/Fonts/Comfortaa-Bold.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://bicwkg3g2bg2e" path="res://assets/Interface/buttons/button_pressed.png" id="3"]
[ext_resource type="Texture2D" uid="uid://wrcsei75gwg5" path="res://assets/Interface/buttons/button_normal.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bq6lb7ern146m" path="res://assets/Interface/buttons/button_hover.png" id="5"]
[ext_resource type="Theme" uid="uid://cn30glrghbfpw" path="res://assets/Theme/theme.tres" id="6"]
[ext_resource type="AudioStream" uid="uid://b33ghovrk2026" path="res://assets/Music/Track_#6.wav" id="7"]
[ext_resource type="Script" uid="uid://c3xg2irdyed6j" path="res://src/Levels/MainMenu.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://fp76xne1f6gf" path="res://assets/Interface/Panels/Level Select.png" id="9"]
[ext_resource type="PackedScene" uid="uid://bjefawc0mt76i" path="res://src/Level Elements/LevelButton/LevelButton.tscn" id="10"]
[ext_resource type="Texture2D" uid="uid://djaff85vld1hb" path="res://assets/Title/WowieJam4.png" id="11"]
[ext_resource type="Texture2D" uid="uid://c3mrc42p01fyb" path="res://assets/Interface/buttons/back_normal.png" id="12"]
[ext_resource type="Texture2D" uid="uid://kahdjuach1nq" path="res://assets/Interface/buttons/back_pressed.png" id="13"]
[ext_resource type="Texture2D" uid="uid://4742dirm3b4e" path="res://assets/Interface/buttons/back_hover.png" id="14"]
[ext_resource type="Texture2D" uid="uid://jhwdxsuhemu1" path="res://assets/Interface/Panels/credits.png" id="15"]
[ext_resource type="Texture2D" uid="uid://c2r0d26paeir0" path="res://assets/Title/Channel.png" id="16"]

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0, 0, 0, 0.184314)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/112/0/ascent = 0.0
cache/0/112/0/descent = 0.0
cache/0/112/0/underline_position = 0.0
cache/0/112/0/underline_thickness = 0.0
cache/0/112/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(1, 1, 1, 0.427451)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.141176, 0.137255, 0.137255, 0.207843)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontFile" id="14"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="15"]
bg_color = Color(0.6, 0.6, 0.6, 0.384314)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.976471, 0.976471, 0.976471, 0.462745)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="12"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="6"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="5"]
resource_name = "Play"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "Quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rixrj"]
_data = {
&"Open": SubResource("6"),
&"Play": SubResource("5"),
&"Quit": SubResource("3"),
&"RESET": SubResource("4")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6")
script = ExtResource("8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -304.0
offset_top = 67.0
offset_right = 304.0
offset_bottom = 262.0
theme_override_styles/panel = SubResource("9")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 7.0
offset_right = 558.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.870588, 0.745098, 0.0509804, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 112
text = "Race Ya!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wowie" type="TextureRect" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -40.0
offset_right = 184.0
offset_bottom = 50.0
texture = ExtResource("11")
expand_mode = 1
stretch_mode = 6

[node name="Youtube" type="Panel" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -127.0
offset_right = 386.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("8")

[node name="HBoxContainer" type="HBoxContainer" parent="Youtube"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 11.0
offset_right = -10.0
offset_bottom = -11.0

[node name="Label3" type="Label" parent="Youtube/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 5
theme_override_colors/font_color = Color(0, 0.415686, 0.745098, 1)
theme_override_fonts/font = SubResource("14")
theme_override_styles/normal = SubResource("15")
text = "Please Subscribe to my
youtube channel
(It would help me a lot !)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Channel" type="Button" parent="Youtube/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Youtube/HBoxContainer/Channel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0
texture = ExtResource("16")
expand_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
autoplay = true

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -226.0
offset_right = -28.0
offset_bottom = -26.0

[node name="Play" type="TextureButton" parent="MenuButtons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuButtons/Play"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Play Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="TextureButton" parent="MenuButtons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuButtons/Credits"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="MenuButtons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MenuButtons/Quit"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.870588, 1, 0.694118, 0.388235)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Levels"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -148.0
offset_right = 208.0
offset_bottom = 148.0
texture = ExtResource("9")
expand_mode = 1

[node name="LevelButtons" type="HFlowContainer" parent="Levels/TextureRect"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 70.0
offset_right = -31.0
offset_bottom = -49.0

[node name="LevelButton" parent="Levels/TextureRect/LevelButtons" instance=ExtResource("10")]
layout_mode = 2

[node name="LevelButton2" parent="Levels/TextureRect/LevelButtons" instance=ExtResource("10")]
layout_mode = 2

[node name="LevelButton3" parent="Levels/TextureRect/LevelButtons" instance=ExtResource("10")]
layout_mode = 2

[node name="LevelButton4" parent="Levels/TextureRect/LevelButtons" instance=ExtResource("10")]
layout_mode = 2

[node name="CloseLevelMenu" type="TextureButton" parent="Levels/TextureRect"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 161.0
offset_top = 251.0
offset_right = 225.0
offset_bottom = 315.0
texture_normal = ExtResource("12")
texture_pressed = ExtResource("13")
texture_hover = ExtResource("14")
ignore_texture_size = true
stretch_mode = 0

[node name="Credits" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.870588, 1, 0.694118, 0.388235)
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Credits"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -194.0
offset_right = 217.0
offset_bottom = 194.0
texture = ExtResource("15")
expand_mode = 1

[node name="Label" type="Label" parent="Credits/TextureRect"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.5
offset_top = 17.0
offset_right = 53.5
offset_bottom = 49.0
theme_override_fonts/font = SubResource("10")
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseCredits" type="TextureButton" parent="Credits/TextureRect"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
texture_normal = ExtResource("12")
texture_pressed = ExtResource("13")
texture_hover = ExtResource("14")
ignore_texture_size = true
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/TextureRect"]
layout_mode = 0
anchor_left = 0.053
anchor_top = 0.245
anchor_right = 0.917
anchor_bottom = 0.847
offset_left = -0.00200081
offset_top = 10.94
offset_right = 0.0219727
offset_bottom = 1.36398
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/TextureRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "This game was made by"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Developer" type="Label" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0.643137, 0.992157, 1)
theme_override_fonts/font = SubResource("11")
text = "\"Variable\""
horizontal_alignment = 1

[node name="DevLinks" type="HFlowContainer" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Youtube" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "Youtube"

[node name="Itch" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "Itch.io"

[node name="Twitter" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "Twitter"

[node name="HSeparator" type="HSeparator" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
self_modulate = Color(0.054902, 0.960784, 0.686275, 1)
layout_mode = 2

[node name="Label2" type="Label" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 0.372549, 0.784314, 1)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("12")
text = "Assets info:"

[node name="Label3" type="Label" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 41)
layout_mode = 2
theme_override_fonts/font = SubResource("11")
text = "So, you wanna know where i got all these amazing assets from?"
autowrap_mode = 3

[node name="Slime" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "1)  Slime"

[node name="Tileset" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "2) Tileset"

[node name="Gui" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "3) Gui"

[node name="Music" type="LinkButton" parent="Credits/TextureRect/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.568627, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0.164706, 0.509804, 1, 1)
theme_override_colors/font_pressed_color = Color(0.682353, 0.176471, 0.176471, 1)
theme_override_colors/font_hover_color = Color(0.152941, 0.94902, 0.294118, 1)
text = "4) Music"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_rixrj")
}

[connection signal="pressed" from="Youtube/HBoxContainer/Channel" to="." method="_on_Youtube_pressed"]
[connection signal="pressed" from="MenuButtons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MenuButtons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MenuButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Levels/TextureRect/CloseLevelMenu" to="." method="_on_CloseLevelMenu_pressed"]
[connection signal="pressed" from="Credits/TextureRect/CloseCredits" to="." method="_on_CloseCredits_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks/Youtube" to="." method="_on_Youtube_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks/Itch" to="." method="_on_Itch_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/DevLinks/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/Slime" to="." method="_on_Slime_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/Tileset" to="." method="_on_Tileset_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/Gui" to="." method="_on_Gui_pressed"]
[connection signal="pressed" from="Credits/TextureRect/ScrollContainer/VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
